--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 	<nav class="navbar navbar-default">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 			        <span class="sr-only">Toggle navigation</span>
@@ -19,13 +19,28 @@
 		      </button>
 		      <%= link_to "Shopping LIst", root_path, class: "navbar-brand" %>
 			</div>
+			<ul class="nav navbar-nav">
+				<li> <%= link_to "Sign Up", new_user_registration_path %> </li>
+				<% if current_user.present? %>
+					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+				<% else %>
+					<li><%= link_to "Log In", new_user_session_path %></li>
+				<% end %>
+			</ul>
+			<% if user_signed_in? %>
+				<%= link_to "Add new items", new_item_path, class: "navbar-text navbar-right" %>
+			<% end %>
 		</div>
 	</nav>
 
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
 
-<%= yield %>
+	<div class="container">
+		<div class="col-md-6 col-md-offset-3">
+			<%= yield %>
+		</div>
+	</div>
 
 </body>
 </html>
