add light styling to forms and flash messages

--- a/app/views/layouts/_home_landing_page.html.erb
+++ b/app/views/layouts/_home_landing_page.html.erb
@@ -1,6 +1,7 @@
-<div class="jumbotron">
+<div class="jumbotron" id="main-header">
 	<h3>Introducing..</h3>
 	<h1>Task Keeper</h1>
 	<h3>A simple To-do-list app!</h3>
 	<%= link_to "Get Started!", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	<%= link_to "Sign In", new_user_session_path, class: "btn btn-default btn-lg" %>
 </div>
