--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,17 @@
  
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#main-header {
+	text-align: center;
+}
+.alert-notice {
+	background-color: #dff0d8;
+	border-color: #d6e9c6;
+	color: #3c763d;
+}
+.alert-alert {
+	background-color: #f2dede;
+	border-color: #ebccd1;
+	color: #a94442;
+}
