--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,14 @@
 		</div>
 	</nav>
 
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
+<!-- 	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p> -->
 
 	<div class="container">
 		<div class="col-md-6 col-md-offset-3">
+			<% flash.each do |name, msg| %>
+				<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+			<% end %>
 			<%= yield %>
 		</div>
 	</div>
