--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,7 @@
 <%= simple_form_for @item do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
-  <%= f.button :submit, class: "btn btn-primary" %>
+  <div class="col-md-6 col-md-offset-4">
+  	<%= f.button :submit, class: "btn btn-primary" %>
+  </div>
 <% end %>
