--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit your list here!</h1>
-
-<%= render 'form' %>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<div class="panel-title">
+			<h1>Edit your list here!</h1>
+		</div>
+	</div>
+	<div class="panel-body">
+		<%= render 'form' %>
+	</div>
