--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,33 +1,42 @@
 <% if user_signed_in? %>
-	<h1>Shopping List!</h1>
-	<hr>
+<div class="panel panel-default" id="list-body">
+	<div class="panel-heading">
+		<div class="panel-title">
+			<h1>Hm, Let's see...</h1>
+		</div>
+	</div>
+	<div class="panel-body">
 
-	<% @items.each do |item| %>
+		<% @items.each do |item| %>
 
-			<% if item.completed? %>
+				<% if item.completed? %>
 
-				<h1 style="opacity: 0.5;"><strike><%= link_to item.title, item %></strike></h1>
-				<p style="opacity: 0.5;"><%= item.description %></p>
-				<p style="opacity: 0.5;">Completed <%= time_ago_in_words(item.completed_at) %> ago </p>
-				<p><%= link_to complete_item_path(item), method: :patch do %></p>
-					<i class="fa fa-lg fa-check"></i>
-				<% end %>
-				<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
-					<i class="fa fa-lg fa-trash"></i>
-				<% end %>
+					<h1 style="opacity: 0.5;"><strike><%= link_to item.title, item %></strike></h1>
+					<p style="opacity: 0.5;"><%= item.description %></p>
+					<p style="opacity: 0.5;">Completed <%= time_ago_in_words(item.completed_at) %> ago </p>
+					<p><%= link_to complete_item_path(item), method: :patch do %></p>
+						<i class="fa fa-lg fa-check"></i>
+					<% end %>
+					<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
+						<i class="fa fa-lg fa-trash"></i>
+						<hr>
+					<% end %>
 
-			<% else %>
-				<h1><%= link_to item.title, item %></h1>
-				<p><%= item.description %></p>
-				<p>Created <%= time_ago_in_words(item.created_at) %> ago </p>
-				<p><%= link_to complete_item_path(item), method: :patch do %></p>
-					<i class="fa fa-lg fa-check"></i>
-				<% end %>
-				<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
-					<i class="fa fa-lg fa-trash"></i>
+				<% else %>
+					<h1><%= link_to item.title, item %></h1>
+					<p><%= item.description %></p>
+					<p>Created <%= time_ago_in_words(item.created_at) %> ago </p>
+					<p><%= link_to complete_item_path(item), method: :patch do %></p>
+						<i class="fa fa-lg fa-check"></i>
+					<% end %>
+					<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
+						<i class="fa fa-lg fa-trash"></i>
+						<hr>
+					<% end %>
 				<% end %>
 			<% end %>
-		<% end %>
-	<% else %>
-	<%= render 'layouts/home_landing_page' %>
+		<% else %>
+		<%= render 'layouts/home_landing_page' %>
+	</div>
+</div>
 <% end %>
