--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,10 @@
-<h1>Add new items to your list!</h1>
-
-<%= render 'form' %>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<div class="panel-title">
+			<h1>Add new items to your list!</h1>
+		</div>
+	</div>
+	<div class="panel-body">
+		<%= render 'form' %>
+	</div>
+</div>
