--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,18 @@
-<h1><%= @item.title %></h1>
-<hr>
-<p><%= @item.description %></p>
-<hr>
-<%= link_to "Back", root_path %>
-<%= link_to "Edit", edit_item_path(@item) %>
-<%= link_to "Delete", item_path(@item), method: :delete, data: { confirm: "Are you sure?"} %>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<div class="panel-title">
+			<h1><%= @item.title %></h1>
+		</div>
+	</div>
+	<div class="panel-body">
+		<hr>
+		<p><%= @item.description %></p>
+		<hr>
+	<div class="panel-footer">
+		<div class="col-md-6 col-md-offset-3">
+		<div class="btn-group">
+		<%= link_to "Back", root_path, class: "btn btn-primary" %>
+		<%= link_to "Edit", edit_item_path(@item), class: "btn btn-primary" %>
+		<%= link_to "Delete", item_path(@item), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-primary" %>
+		</div>
+	</div>
