--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,8 @@
 			<%= yield %>
 		</div>
 	</div>
-
+	<footer style="color: #fff;" class="col-md-8 col-md-offset-2">
+		<p>2016 Task Keeper app built on Rails 4 by Ken Ijiwoye</p>
+	</footer>
 </body>
 </html>
