--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,36 +6,41 @@
 		</div>
 	</div>
 	<div class="panel-body">
+		<div id="section">	
+			<% @items.each do |item| %>
 
-		<% @items.each do |item| %>
+					<% if item.completed? %>
 
-				<% if item.completed? %>
-
-					<h1 style="opacity: 0.5;"><strike><%= link_to item.title, item %></strike></h1>
-					<p style="opacity: 0.5;"><%= item.description %></p>
-					<p style="opacity: 0.5;">Completed <%= time_ago_in_words(item.completed_at) %> ago </p>
-					<p><%= link_to complete_item_path(item), method: :patch do %></p>
-						<i class="fa fa-lg fa-check"></i>
-					<% end %>
-					<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
-						<i class="fa fa-lg fa-trash"></i>
-						<hr>
-					<% end %>
-
-				<% else %>
-					<h1><%= link_to item.title, item %></h1>
-					<p><%= item.description %></p>
-					<p>Created <%= time_ago_in_words(item.created_at) %> ago </p>
-					<p><%= link_to complete_item_path(item), method: :patch do %></p>
-						<i class="fa fa-lg fa-check"></i>
-					<% end %>
-					<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
-						<i class="fa fa-lg fa-trash"></i>
-						<hr>
+						<h1 style="opacity: 0.5;"><strike><%= link_to item.title, item %></strike></h1>
+						<p style="opacity: 0.5;"><%= item.description %></p>
+						<p style="opacity: 0.5;">Completed <%= time_ago_in_words(item.completed_at) %> ago </p>
+						<p><%= link_to complete_item_path(item), method: :patch do %></p>
+							<i class="fa fa-lg fa-check col-md-2 col-md-offset-4"></i>
+						<% end %>
+						<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
+							<i class="fa fa-lg fa-trash col-md-2"></i>
+							
+						<% end %>
+		</div>					
+	<hr>
+		<div id="section">	
+					<% else %>
+						<h1><%= link_to item.title, item %></h1>
+						<p><%= item.description %></p>
+						<p>Created <%= time_ago_in_words(item.created_at) %> ago </p>
+						<p><%= link_to complete_item_path(item), method: :patch do %></p>
+							<i class="fa fa-lg fa-check col-md-2 col-md-offset-4"></i>
+						<% end %>
+						<p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
+							<i class="fa fa-lg fa-trash col-md-2"></i>
+							
+						<% end %>
+		</div>
+	<hr>
 					<% end %>
 				<% end %>
-			<% end %>
-		<% else %>
+			<% else %>
+
 		<%= render 'layouts/home_landing_page' %>
 	</div>
 </div>
