--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default" id="show-view">
 	<div class="panel-heading">
 		<div class="panel-title">
 			<h1><%= @item.title %></h1>
