--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
 		  <div class="form-inputs">
 		    <%= f.input :email, required: true, autofocus: true %>
-		    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+		    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), id: "pass1" %>
 		    <%= f.input :password_confirmation, required: true %>
 		  </div>
 	</div>
