--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 			<ul class="nav navbar-nav collapse navbar-collapse" id="bs-close">
 				<li> <%= link_to "Sign Up", new_user_registration_path %> </li>
 				<% if current_user.present? %>
-					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, id: "sign-out" %></li>
 				<% else %>
 					<li><%= link_to "Log In", new_user_session_path %></li>
 				<% end %>
